--- a/REACT/forms-practice/src/App.css
+++ b/REACT/forms-practice/src/App.css
@@ -4,11 +4,18 @@
 .HookForm{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
   padding: 25px;
 }
-.output{
-  display: flex;
+.input{
+  background-color: beige;
+  padding: 15px;
+  margin: 15px;
+  border: solid;
+  border-radius: 15px;
+  border-color:darkgrey;
+}
+.wrapper{
+  display:flex;
   justify-content: center;
-  align-items: center;
 }
